--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <!-- Top Bar with Profile Info -->
   <div class="top-bar">
     <div class="profile">
-      <img src="profile-placeholder.png" alt="Profile Picture" class="profile-pic">
-      <h1>Ria ☆</h1>
+      <img src="pfp.png" alt="Profile Picture" class="profile-pic">
+      <h1>~Your Name Here~</h1>
       <p>@numbpilled</p>
       <p>she/her | carperson | en+esp</p>
     </div>
@@ -31,8 +31,8 @@
   <div class="container">
     <!-- Column 1 (Left) -->
     <div class="column">
-      <h2>STAN LIST</h2>
-      <img src="stan-placeholder.png" alt="Stan Image" class="img-box">
+      <h2>SOME LIST</h2>
+      <img src="list.jpg" alt="SOME LIST Image" class="img-box">
       <ul>
         <li>White albino blackpink aespaa</li>
         <li>Many more fandom references here</li>
@@ -46,7 +46,7 @@
       <h2>BYF</h2>
       <p>I'm just tweeting about random things, if you don't like it, simply don't interact.</p>
       <h2>DNI</h2>
-      <p>Basic DNI criteria, no racists, no TERFs, etc.</p>
+      <p>Basic DNI criteria, no cryptids, no serfs, etc.</p>
       <h2>Links</h2>
       <ul>
         <li><a href="#">My Portfolio</a></li>
@@ -64,17 +64,17 @@
 
   <!-- Floating Images -->
   <img src="floating1.gif" class="floating-img floating-1" alt="Floating Image">
-  <img src="floating2.gif" class="floating-img floating-2" alt="Floating Image">
+  <img src="floating2.png" class="floating-img floating-2" alt="Floating Image">
 
   <!-- Footer -->
   <footer>
-    <p>Made with 💻 by Splicer</p>
+    <p>Made with 💻 by Splicer/Numbpilled</p>
   </footer>
 
   <!-- Styles -->
   <style>
     body {
-      background: url('tile-bg1.png') repeat;
+      background: url('tile-bg1.jpg') repeat;
       font-family: 'CustomFontHeader', sans-serif;
       color: white;
     }
